# llm-finetune-for-mac

./: .gitignore  finetune_export_mac.py  full-finetune.py  pyproject.toml  requirements.txt  requirements_mac.txt
