[project]
name = "llm-finetune-for-mac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.5.0",
    "datasets>=4.4.2",
    "huggingface-hub>=0.36.0",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "trl>=0.26.2",
]
